--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.popup{
+.remove-lock-popup{
     box-sizing: border-box;
     display: none;
     position: absolute;
@@ -12,8 +12,9 @@
     transition: background-color .3s ease-in-out;
     font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
     opacity: 0.9;
+    z-index: 100000;
 }
 
-.popup:hover {
+.remove-lock-popup:hover {
     background-color: #000;
 }
